# delonix-runtime

./: .dockerignore  .git-blame-ignore-revs  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Delonixfile  Makefile  README.md  README.rst  deny.toml  rust-toolchain.toml
.claude/agents/: escriba.md  martin.md  revisor.md  sentinela.md
.github/workflows/: ci.yml  release.yml  vm-image.yml
crates/delonix-cri/: Cargo.toml  build.rs
crates/delonix-cri/proto/: api.proto
crates/delonix-cri/src/: lib.rs  runtime_svc.rs  spdy.rs  streaming.rs
crates/delonix-cri/src/runtime_svc/: lifecycle.rs
crates/delonix-image/: Cargo.toml
crates/delonix-image/src/: auth.rs  build.rs  buildpack.rs  cas.rs  detect.rs  image.rs  internal_registry.rs  lib.rs  load.rs  overlay.rs  registry.rs  sign.rs
crates/delonix-mgmt/: Cargo.toml
crates/delonix-mgmt/src/: lib.rs
crates/delonix-net/: Cargo.toml  build.rs
crates/delonix-net/bpf/: delonix_flow.bpf.c
crates/delonix-net/src/: bpf.rs  cni.rs  discover.rs  infra.rs  ipam.rs  lib.rs  router.rs  wg.rs
crates/delonix-net/tests/: ip_invariants.rs
crates/delonix-runtime/: Cargo.toml
crates/delonix-runtime-bin/: Cargo.toml  build.rs
crates/delonix-runtime-bin/data/: apparmor-delonix-default  pt.po
crates/delonix-runtime-bin/src/: main.rs
crates/delonix-runtime-bin/src/cmd/: boot.rs  build.rs  cluster.rs  complete.rs  conditions.rs  container.rs  dash.rs  dependency.rs  dockerapi.rs  firewall.rs  flow.rs  httproute.rs  image.rs  ingress_proxy.rs  k8s_recipes.rs  kindmode.rs  kube.rs  lb.rs  manifest.rs  mapped.rs  mod.rs  names.rs  netns.rs  network.rs  output.rs  po.rs  pod.rs  remote.rs  scaffold.rs  scan.rs  secret.rs  sharevolume.rs  stack.rs  storage.rs  system.rs  tunnel.rs  util.rs  vm.rs  vmbridge.rs  vmimage.rs  (+1 more)
crates/delonix-runtime-bin/templates/django/: .dockerignore  .gitignore  Delonixfile  README.md  delonix-manifest.yaml  pyproject.toml
crates/delonix-runtime-bin/templates/django/config/: settings.py  urls.py
crates/delonix-runtime-bin/templates/go/: .dockerignore  .gitignore  Delonixfile  README.md  delonix-manifest.yaml  go.mod
crates/delonix-runtime-bin/templates/go/cmd/__NAME__/: main.go
crates/delonix-runtime-bin/templates/go/internal/server/: health.go  server.go  server_test.go
crates/delonix-runtime-bin/templates/haproxy/: Delonixfile  README.md  haproxy.cfg
crates/delonix-runtime-bin/templates/httpd/: Delonixfile  README.md  delonix-manifest.yaml
crates/delonix-runtime-bin/templates/httpd/public/: index.html
crates/delonix-runtime-bin/templates/laravel/: .dockerignore  .env.example  .gitignore  Delonixfile  README.md  composer.json  delonix-manifest.yaml  phpunit.xml
crates/delonix-runtime-bin/templates/laravel/routes/: api.php  console.php  web.php
crates/delonix-runtime-bin/templates/laravel/tests/Feature/: HealthTest.php
crates/delonix-runtime-bin/templates/nestjs/: Delonixfile  README.md  delonix-manifest.yaml  package.json  tsconfig.json
crates/delonix-runtime-bin/templates/nestjs/src/: app.module.ts  main.ts
crates/delonix-runtime-bin/templates/nestjs/src/health/: health.controller.ts
crates/delonix-runtime-bin/templates/nextjs/: .dockerignore  Delonixfile  README.md  package.json
crates/delonix-runtime-bin/templates/nextjs/app/: layout.tsx  page.tsx
crates/delonix-runtime-bin/templates/nextjs/app/api/v1/health/live/: route.ts
crates/delonix-runtime-bin/templates/nginx/: Delonixfile  README.md  nginx.conf
crates/delonix-runtime-bin/templates/nginx/html/: index.html
crates/delonix-runtime-bin/templates/node/: .dockerignore  .env.example  Delonixfile  README.md  delonix-manifest.yaml  package.json  tsconfig.json
crates/delonix-runtime-bin/templates/node/src/: app.ts  index.ts
crates/delonix-runtime-bin/templates/node/src/routes/: health.ts
crates/delonix-runtime-bin/templates/node/test/: health.test.ts
crates/delonix-runtime-bin/templates/odoo/: .dockerignore  Delonixfile  README.md  delonix-manifest.yaml
crates/delonix-runtime-bin/templates/odoo/addons/: .gitkeep
crates/delonix-runtime-bin/templates/python/: .dockerignore  .env.example  Delonixfile  README.md  delonix-manifest.yaml  pyproject.toml  ruff.toml
crates/delonix-runtime-bin/templates/python/src/__MODULE__/: config.py  main.py
crates/delonix-runtime-bin/templates/python/src/__MODULE__/api/: health.py  router.py
crates/delonix-runtime-bin/templates/python/tests/: test_health.py
crates/delonix-runtime-core/: Cargo.toml
crates/delonix-runtime-core/src/: cred_vault.rs  error.rs  events.rs  lib.rs  metrics.rs  secret.rs  store.rs  telemetry.rs  typestate.rs  virt.rs  workload_net.rs
crates/delonix-scan/: Cargo.toml
crates/delonix-scan/data/: advisories.json
crates/delonix-scan/src/: lib.rs  pytree.rs
crates/delonix-vm/: Cargo.toml
crates/delonix-volume/: Cargo.toml
docs/: AUDITORIA-E2E.md  COMPARACAO-DOCKER-PODMAN.md  RELATORIO-PRE-PRODUCAO.md  RELEASES.md  arquitectura.html  c4.html  cheatsheet.html  comparacao.html  cri.html  delonixctl.html  gen.py  index.html  kinds.html  tutorial-delonix-temp.html
docs/comandos/: boot.html  build.html  cluster.html  completion.html  container.html  dash.html  docker-api.html  egress.html  flow.html  httproute.html  image.html  ingress.html  kube.html  netns.html  network.html  pod.html  secret.html  sharevolume.html  stack.html  storage.html  system.html  tunnel.html  vm.html  volumes.html
docs/releases/: v0.10.0.md  v0.10.1.md  v0.10.2.md  v0.11.0.md  v0.11.1.md  v0.12.0.md  v0.13.0.md  v0.13.1.md  v0.13.2.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.4.1.md  v0.4.2.md  v0.5.0.md  v0.5.1.md  v0.6.0.md  (+20 more)
examples/: cluster-kind.yaml  cluster-ssh.yaml  cluster-vm.yaml  container.yaml  dependency.yaml  firewall-network.yaml  firewall.yaml  firewallpolicy.yaml  httproute.yaml  image.yaml  ingress.yaml  nas-vm-cloud-config.yaml  nas-vm-sdn-ch.md  network.yaml  pod-multi.yaml  pod.yaml  secret.yaml  sharevolume.yaml  stack.yaml  storage.yaml  tunnel.yaml  vm-volumes.yaml  vm.yaml  volume.yaml
scripts/: critest.sh  e2e.sh  gen-releases.sh  install.sh
(+8 files in other folders)
