[workspace]
resolver = "2"
members = [
    "crates/delonix-runtime-core",
    "crates/delonix-runtime",
    "crates/delonix-runtime-bin",
    "crates/delonix-image",
    "crates/delonix-net",
    "crates/delonix-vm",
    "crates/delonix-volume",
    "crates/delonix-cri",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/angolardevops/delonix-runtime"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
nix = { version = "0.27", features = ["sched", "mount", "process", "hostname", "fs", "user", "signal"] }
libc = "0.2"
seccompiler = "0.4"
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
tar = "0.4"
flate2 = "1"
