[workspace]
resolver = "2"
members = [
    "crates/delonix-runtime-core",
    "crates/delonix-runtime",
    "crates/delonix-runtime-bin",
    "crates/delonix-image",
    "crates/delonix-net",
    "crates/delonix-vm",
    "crates/delonix-volume",
    "crates/delonix-cri",
    "crates/delonix-mgmt",
    "crates/delonix-scan",
]

[workspace.package]
version = "0.7.21"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/angolardevops/delonix-runtime"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
nix = { version = "0.27", features = ["sched", "mount", "process", "hostname", "fs", "user", "signal"] }
libc = "0.2"
seccompiler = "0.4"
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
tar = "0.4"
flate2 = "1"
# Tipos OCI canónicos (image/distribution) — evita structs hand-rolled do schema.
oci-spec = { version = "0.10.0", default-features = false }
# Observabilidade: logging estruturado (fundação C1). Texto por omissão, JSON via
# DELONIX_LOG_FORMAT=json; nível por DELONIX_LOG/RUST_LOG (env-filter).
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# Observabilidade — 3.ª perna: spans distribuídos via OpenTelemetry (OTLP). Só
# activo quando `DELONIX_OTLP_ENDPOINT` está definido (ver `telemetry::init`).
# Versões alinhadas entre si (a compat OTel↔tracing-opentelemetry é frágil):
# opentelemetry/otlp/sdk 0.32.x + tracing-opentelemetry 0.33.x.
# Transporte OTLP por HTTP/protobuf, exportador em batch numa THREAD dedicada
# (`futures_executor::block_on`, sem runtime tokio ambiente — ver a nuance
# CLI-sync em `telemetry.rs`). Cliente `reqwest` em modo BLOQUEANTE e SEM backend
# de TLS (endpoint em texto simples, típico de um collector local em
# `http://…:4318`): evita arrastar aws-lc-sys/openssl/native-tls (C + licença
# OpenSSL) — mantém a supply-chain de um runtime público mínima e justificada.
# Um endpoint `https://` não é suportado por desenho (erro claro em runtime).
opentelemetry = "0.32"
opentelemetry_sdk = "0.32"
opentelemetry-otlp = { version = "0.32", default-features = false, features = [
    "trace",
    "http-proto",
    "reqwest-blocking-client",
] }
tracing-opentelemetry = { version = "0.33", default-features = false }

# Perfil de release dos binários publicados: LTO thin + 1 codegen unit dão
# um binário mais pequeno e mais rápido (inlining entre crates — o caminho
# quente hash/serde/parsing beneficia) por custo só em tempo de build no CI.
# O strip é feito no workflow de release, não aqui (os builds locais mantêm
# símbolos para depurar).
[profile.release]
lto = "thin"
codegen-units = 1
