[package]
name = "delonix-net"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
delonix-runtime-core = { path = "../delonix-runtime-core" }
tracing = { workspace = true }
libc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
# Property-based testing dos invariantes de alocação de IP (S5).
proptest = "1"
