[package]
name = "delonix-runtime-bin"
version.workspace = true
edition.workspace = true
license.workspace = true

# O `delonix` — CLI opensource completa deste motor (container/image/build/vm/
# volumes/network), agrupada em comandos semânticos. Sem a API/Console/tenant
# do PaaS privado (isso é `delonix-cli`/`delonix-paas`, outro repo).
[[bin]]
name = "delonix"
path = "src/main.rs"

[dependencies]
delonix-runtime-core = { path = "../delonix-runtime-core" }
delonix-runtime = { path = "../delonix-runtime" }
delonix-image = { path = "../delonix-image" }
delonix-vm = { path = "../delonix-vm" }
delonix-volume = { path = "../delonix-volume" }
delonix-scan = { path = "../delonix-scan" }
delonix-cri = { path = "../delonix-cri" }
delonix-mgmt = { path = "../delonix-mgmt" }
# Reverse-proxy L7 embutido (`delonix ingress-proxy`, kind: HTTPRoute) — hyper puro
# + hyper-util. JÁ estão na árvore do bin (transitivos via delonix-cri/tonic), por
# isso não acrescentam superfície de supply-chain nova; só passam a deps directas.
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "io-util", "signal"] }
hyper = { version = "1", features = ["server", "client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "client-legacy", "http1"] }
http-body-util = "0.1"
bytes = "1"
# TLS do proxy (Fase 3): tokio-rustls já está na árvore (via delonix-cri). O
# provider é o `ring` (já presente) — não puxamos aws-lc-rs. `rustls-pemfile`
# carrega cert/chave BYO (PEM do kind: Secret); `rcgen` gera o self-signed.
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
rustls-pemfile = "2"
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem"] }
# `__volsnap` (tar.gz do _data de um volume, no userns mapeado) — ja no workspace,
# nao acrescenta nada a arvore de dependencias do repo publico.
tar = { workspace = true }
flate2 = { workspace = true }
delonix-net = { path = "../delonix-net" }
clap = { workspace = true }
clap_complete = { version = "4.6", features = ["unstable-dynamic"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
sha2 = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls-webpki-roots"] }
libc = { workspace = true }
# `delonix dash` — TUI interactivo (tiles/tabela/gráfico estilo htop). Só o BIN a
# usa (os crates de motor ficam dep-limpos); o modo `--once` (snapshot de texto)
# não precisa de tty. ratatui traz o crossterm.
ratatui = "0.29"
oci-spec = { workspace = true, features = ["runtime"] }
